[package]
name = "solana-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
solana-sdk = "2"
solana-client = "2"
solana-system-interface = "1"
spl-token = "6"
spl-associated-token-account = "4"
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true